# stock-watcher

./: .env.template  .gitignore  Dockerfile  RECENT_NOTIFICATION_DATETIME  app.py  docker-compose.yaml  main.py  pyproject.toml  register_cron.sh  requirements.txt  stock_watcher.db
.github/workflows/: action.yaml  build_and_push_image.yaml  scheduled_deploy.yaml
src/stock_watcher/: __init__.py  db.py  logger.py  mail_sender.py  notification_record_store.py  notifier.py  price_getter.py  stock_mapper.py  stock_watch_manager.py  telebot_sender.py  watch_result.py  watcher.py
watchers/: google_watcher.py  msft_buy_watcher.py  msft_sell_watcher.py  samsung_electronics_watcher.py  tesla_buy_watcher.py  tesla_sell_watcher.py
